oci_test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: resume-app
  labels:
    name: resume-app
