oci_test/market-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market-backend
  namespace: resume-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: market-backend
  template:
    metadata:
      labels:
        app: market-backend
    spec:
      containers:
        - name: market-backend
          image: yyz.ocir.io/yztdqx0npeqw/market-backend:latest
          ports:
            - containerPort: 5001
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5001
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: market-backend-service
  namespace: resume-app
  annotations:
    service.beta.kubernetes.io/oci-load-balancer-shape: "10Mbps"
spec:
  selector:
    app: market-backend
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
