oci_test/kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: resume-app
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rule-type: "PathPrefix"
    traefik.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: oci.mintmelon.ca
    http:
      paths:
      - path: /api/job_market
        pathType: Prefix
        backend:
          service:
            name: market-backend-service
            port:
              number: 5001
      - path: /modifier
        pathType: Prefix
        backend:
          service:
            name: editor-frontend-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: market-frontend-service
            port:
              number: 80
